# oximedia

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  audit.toml
benches/: BENCHMARKS.md  Cargo.toml  IMPLEMENTATION.md  README.md  TODO.md  analytics_bench.rs  audio_bench.rs  audio_metering.rs  cache_bench.rs  caption_gen_bench.rs  cdn_bench.rs  codec_bench.rs  codec_benchmark.rs  compare_ffmpeg.sh  compat_ffmpeg_bench.rs  container_bench.rs  cv_bench.rs  dedup_hash.rs  filter_benchmark.rs  format_probe.rs  graph_bench.rs  hdr_bench.rs  io_bench.rs  neural_bench.rs  pipeline_bench.rs  quality_metrics.rs  run_benchmarks.sh  spatial_bench.rs  stream_bench.rs  video_bench.rs  vr360_bench.rs
benches/helpers/: mod.rs
crates/oximedia-360/: Cargo.toml  README.md  TODO.md
crates/oximedia-360/benches/: cubemap_bench.rs
crates/oximedia-360/src/: apple_spatial.rs  eac.rs  fisheye.rs  fisheye_lut.rs  headset_metadata.rs  lib.rs  octahedral.rs  orientation.rs  point_cloud.rs  projection.rs  sampling.rs  spatial_metadata.rs  stabilization.rs  stereo.rs  tiled.rs  (+2 more)
crates/oximedia-access/: Cargo.toml  README.md  TODO.md
crates/oximedia-align/: Cargo.toml  README.md  TODO.md
crates/oximedia-archive/: Cargo.toml  README.md  TODO.md
crates/oximedia-archive-pro/: Cargo.toml  README.md  TODO.md
crates/oximedia-audio/: Cargo.toml  README.md  TODO.md
crates/oximedia-audiopost/: Cargo.toml  README.md  TODO.md
crates/oximedia-batch/: Cargo.toml  README.md  TODO.md
crates/oximedia-bench/: Cargo.toml  README.md  TODO.md
crates/oximedia-calibrate/: Cargo.toml  README.md  TODO.md
crates/oximedia-caption-gen/: Cargo.toml  README.md  TODO.md
crates/oximedia-clips/: Cargo.toml  README.md  TODO.md
crates/oximedia-cloud/: Cargo.toml  README.md  TODO.md
crates/oximedia-collab/: Cargo.toml  README.md  TODO.md
crates/oximedia-compat-cv2/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs
crates/oximedia-conform/: Cargo.toml  README.md  TODO.md
crates/oximedia-container/: Cargo.toml  README.md  TODO.md
crates/oximedia-core/: Cargo.toml  README.md  TODO.md
crates/oximedia-dedup/: Cargo.toml  README.md  TODO.md
crates/oximedia-distributed/: Cargo.toml  README.md  TODO.md  build.rs
crates/oximedia-drm/: Cargo.toml  README.md  TODO.md
crates/oximedia-edit/: Cargo.toml  README.md  TODO.md
crates/oximedia-effects/: Cargo.toml  README.md  TODO.md
crates/oximedia-farm/: Cargo.toml  README.md  TODO.md  build.rs
fuzz/: Cargo.toml  README.md
fuzz/dictionaries/: av1.dict  dash.dict  hls.dict  matroska.dict  ogg.dict  rtmp.dict
fuzz/fuzz_targets/: aaf_parser.rs  ass_parser.rs  av1_decoder.rs  dash_parser.rs  ebml_parser.rs  exr_parser.rs  ffv1_decoder.rs  flac_decoder.rs  flac_parser.rs  hls_parser.rs  jpegxl_decoder.rs  matroska_parser.rs  mp4_parser.rs  ogg_parser.rs  opus_decoder.rs  rtmp_parser.rs  srt_parser.rs  theora_decoder.rs  tiff_parser.rs  ttml_parser.rs  vorbis_decoder.rs  vp8_decoder.rs  vp9_decoder.rs  wav_parser.rs  webvtt_parser.rs  y4m_parser.rs
fuzz/scripts/: ci-fuzz.sh  continuous-fuzz.sh  coverage-report.sh  minimize-crashes.sh
oximedia/: Cargo.toml  README.md  TODO.md
oximedia-cli/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
oximedia-cli/examples/: README.md  abr-package.sh  cv2-pipeline.sh  dailies-ingest.sh  forensics-investigate.sh  live-broadcast.sh  loudness-normalize.sh  quality-check.sh  restore-degraded.sh
oximedia-cli/src/: archive_cmd.rs  archivepro_cmd.rs  audio_cmd.rs  batch.rs  batch_cmd.rs  benchmark.rs  captions_cmd.rs  clips_cmd.rs  cloud_cmd.rs  collab_cmd.rs  commands.rs  completions_cmd.rs  concat.rs  decode_helper.rs  dedup_cmd.rs  denoise_cmd.rs  distributed_cmd.rs  doctor_cmd.rs  dolbyvision_cmd.rs  drm_cmd.rs  edl_cmd.rs  exit_codes.rs  extract.rs  farm_cmd.rs  ffcompat_cmd.rs  frame_extract.rs  graphics_cmd.rs  handlers.rs  image_cmd.rs  loudness_cmd.rs  main.rs  mam_cmd.rs  man_cmd.rs  metadata.rs  mir_cmd.rs  ml_cmd.rs  multicam_cmd.rs  normalize_cmd.rs  output.rs  plugin_cmd.rs  (+21 more)
oximedia-cli/tests/: batch_parallel.rs  cli.rs  cli_help.rs  cli_help_per_command.rs  cli_smoke_listings.rs  cloud_no_creds.rs  completions_smoke.rs  cv2_dnn.rs  cv2_explain.rs  cv2_imread_imwrite.rs  cv2_list.rs  cv2_ops.rs  cv2_orb.rs  cv2_smoke.rs  doctor_full.rs  doctor_smoke.rs  exit_code_smoke.rs  explain.rs  ff_golden.rs  json_ndjson_conflict.rs  json_strict.rs  man_smoke.rs  ml_commands.rs  ndjson_probe.rs  no_color.rs  normalize_e2e.rs  probe_format_json_snapshot.rs  probe_hash_flag.rs  probe_json_snapshot.rs  probe_quality_snapshot.rs  progress_json.rs  quiet_flag.rs  scopes_decode.rs  scopes_smoke.rs  subtitle_timecode_honesty.rs  transcode_normalize_audio.rs  transcode_reencode.rs  transcode_trim_map.rs  tui_smoke.rs  validate_loudness_check.rs
oximedia-wasm/: Cargo.toml  README.md  TODO.md  build-dev.sh  build.sh
oximedia-wasm/.cargo/: config.toml
oximedia-wasm/src/: analytics_wasm.rs  audio_decoder.rs  audiopost_wasm.rs  cache_wasm.rs  colormgmt_wasm.rs  conform_wasm.rs  container.rs  demuxer.rs  denoise_wasm.rs  forensics_wasm.rs  hdr_wasm.rs  io.rs  lib.rs  lut_wasm.rs  media_player.rs  multicam_wasm.rs  neural_wasm.rs  normalize_wasm.rs  probe.rs  qc_wasm.rs  recommend_wasm.rs  scopes_wasm.rs  shots_wasm.rs  stream_wasm.rs  streaming_demuxer.rs  timecode_wasm.rs  types.rs  utils.rs  video_encoder.rs  webcodecs_bridge.rs  worker_helpers.rs
oximedia-wasm/tests/: wasm_smoke.rs
oximedia/examples/: ffmpeg_translate_demo.rs
oximedia/src/: lib.rs  prelude.rs
oximedia/tests/: feature_matrix.rs  integration.rs  prelude_smoke.rs
web/: Cargo.toml  README.md  TODO.md  allowed-deps.txt  deny.toml  package.json
web/bench/: README.md  bench.js  index.html  run.sh
web/demo/: README.md  app.js  index.html  patterns.js  sources.js  style.css
web/js/: _frame.d.ts  _frame.js  color.d.ts  color.js  quality.d.ts  quality.js  scale.d.ts  scale.js  scopes.d.ts  scopes.js
web/scripts/: build.sh  dep-gate.sh  export-demo.sh  serve.sh  size-gate.sh
(+8196 files in other folders)
