[package]
name = "oximedia-fuzz"
version = "0.0.0"
publish = false
# The root workspace `exclude`s this crate, so workspace inheritance is
# unavailable here; keep the edition in sync with [workspace.package].
edition = "2021"

# Standalone: the root workspace excludes `fuzz`.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
tokio = { version = "1", features = ["rt"] }

# Workspace crates
oximedia-core = { path = "../crates/oximedia-core" }
oximedia-io = { path = "../crates/oximedia-io" }
oximedia-container = { path = "../crates/oximedia-container" }
oximedia-codec = { path = "../crates/oximedia-codec", features = ["av1", "vp9", "vp8", "theora", "ffv1", "jpegxl"] }
oximedia-audio = { path = "../crates/oximedia-audio", features = ["opus", "vorbis", "flac"] }
oximedia-net = { path = "../crates/oximedia-net" }
oximedia-image = { path = "../crates/oximedia-image" }
oximedia-subtitle = { path = "../crates/oximedia-subtitle" }
oximedia-aaf = { path = "../crates/oximedia-aaf" }

# Prevent this from activating dev-dependencies of the crates above
[profile.release]
debug = 1

# ============================================================================
# Container Parser Targets
# ============================================================================

[[bin]]
name = "matroska_parser"
path = "fuzz_targets/matroska_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ogg_parser"
path = "fuzz_targets/ogg_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_parser"
path = "fuzz_targets/flac_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mp4_parser"
path = "fuzz_targets/mp4_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wav_parser"
path = "fuzz_targets/wav_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "y4m_parser"
path = "fuzz_targets/y4m_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aaf_parser"
path = "fuzz_targets/aaf_parser.rs"
test = false
doc = false
bench = false

# ============================================================================
# Image Format Targets
# ============================================================================

[[bin]]
name = "tiff_parser"
path = "fuzz_targets/tiff_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "exr_parser"
path = "fuzz_targets/exr_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jpegxl_decoder"
path = "fuzz_targets/jpegxl_decoder.rs"
test = false
doc = false
bench = false

# ============================================================================
# Subtitle / Caption Parser Targets
# ============================================================================

[[bin]]
name = "srt_parser"
path = "fuzz_targets/srt_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ass_parser"
path = "fuzz_targets/ass_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webvtt_parser"
path = "fuzz_targets/webvtt_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ttml_parser"
path = "fuzz_targets/ttml_parser.rs"
test = false
doc = false
bench = false

# ============================================================================
# Video Codec Targets
# ============================================================================

[[bin]]
name = "av1_decoder"
path = "fuzz_targets/av1_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ffv1_decoder"
path = "fuzz_targets/ffv1_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vp9_decoder"
path = "fuzz_targets/vp9_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vp8_decoder"
path = "fuzz_targets/vp8_decoder.rs"
test = false
doc = false
bench = false

# ============================================================================
# Audio Codec Targets
# ============================================================================

[[bin]]
name = "opus_decoder"
path = "fuzz_targets/opus_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vorbis_decoder"
path = "fuzz_targets/vorbis_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_decoder"
path = "fuzz_targets/flac_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "theora_decoder"
path = "fuzz_targets/theora_decoder.rs"
test = false
doc = false
bench = false

# ============================================================================
# Parser Targets
# ============================================================================

[[bin]]
name = "ebml_parser"
path = "fuzz_targets/ebml_parser.rs"
test = false
doc = false
bench = false

# ============================================================================
# Network Protocol Targets
# ============================================================================

[[bin]]
name = "hls_parser"
path = "fuzz_targets/hls_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dash_parser"
path = "fuzz_targets/dash_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rtmp_parser"
path = "fuzz_targets/rtmp_parser.rs"
test = false
doc = false
bench = false
