[package]
name = "oximedia-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "WebAssembly bindings for OxiMedia"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oximedia-core = { workspace = true, features = ["wasm"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
bytes.workspace = true
thiserror.workspace = true
bitflags.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "console",
]

[features]
default = []
