[package]
name = "oximedia-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "WebAssembly bindings for OxiMedia"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oximedia-core = { workspace = true, features = ["wasm"] }
# NOTE: "vp8" feature intentionally omitted -- the honest WASM surface has no
# VP8 decoder (see video_decoder.rs removal); "av1" is still required by
# WasmMediaPlayer (media_player.rs).
oximedia-codec = { workspace = true, default-features = false, features = ["av1"] }
# NOTE: "vorbis" intentionally not requested here -- this crate's own src/
# needs only opus+flac (see audio_decoder.rs; the WasmVorbisDecoder class
# was removed because oximedia_audio::vorbis only round-trips its own
# synthetic test format, not real Ogg Vorbis bitstreams). The root
# workspace.dependencies entry for oximedia-audio does not set
# `default-features = false`, so (unlike oximedia-codec above) this crate
# cannot locally opt out of oximedia-audio's defaults -- vorbis/mp3 may
# still be compiled in transitively; this declaration documents what
# oximedia-wasm itself actually uses, not a workspace-wide guarantee.
oximedia-audio = { workspace = true, features = ["opus", "flac"] }
oximedia-audio-analysis.workspace = true
oximedia-metering.workspace = true
oximedia-metadata.workspace = true
oximedia-graph.workspace = true
oximedia-subtitle.workspace = true
oximedia-quality.workspace = true
oximedia-graphics.workspace = true
oximedia-multicam.workspace = true
oximedia-forensics.workspace = true
oximedia-restore.workspace = true
oximedia-captions.workspace = true
oximedia-timecode.workspace = true
oximedia-convert.workspace = true
oximedia-colormgmt.workspace = true
oximedia-transcode.workspace = true
oximedia-image.workspace = true
oximedia-watermark.workspace = true
oximedia-scopes.workspace = true
oximedia-denoise.workspace = true
oximedia-plugin.workspace = true
oximedia-mir.workspace = true
oximedia-qc.workspace = true
oximedia-dolbyvision.workspace = true
oximedia-scaling.workspace = true
oximedia-normalize.workspace = true
oximedia-shots.workspace = true
oximedia-neural.workspace = true
oximedia-stream.workspace = true
oximedia-hdr.workspace = true
oximedia-lut.workspace = true
oximedia-spatial.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
bytes.workspace = true
thiserror.workspace = true
bitflags.workspace = true
serde.workspace = true
serde_json.workspace = true
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dependencies.web-sys]
workspace = true
features = [
    "console",
]

[dev-dependencies]
# Not in [workspace.dependencies] (this crate owns its wasm-only tooling
# deps directly -- see the `getrandom`/`getrandom_02` entries above for the
# established precedent). Used by tests/wasm_smoke.rs; run with
# `wasm-pack test --node oximedia-wasm` (see that file's module docs).
wasm-bindgen-test = "0.3"

[features]
default = []
audio-decode = []
audio-analysis = []
metadata = []
