[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
authors = ["COOLJAPAN OU (Team Kitasan)"]
repository = "https://github.com/cool-japan/oximedia"

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Speed-tuned release profile: every module in this workspace ships per-frame
# kernels (scopes scatter loops, the colour chain, separable resampling, SSIM
# windows) whose 30 fps budgets depend on LLVM's loop optimisations and
# autovectorisation, which `opt-level = "z"` disables. All four modules stay
# comfortably under their gzip soft budgets at `-O3` (see
# scripts/size-gate.sh), so speed wins the trade.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
