[package]
name = "oximedia-audio"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Audio codec implementations for OxiMedia"
keywords = ["audio", "codec", "sound", "dsp", "multimedia"]
categories = ["multimedia::audio", "multimedia"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["opus", "vorbis", "flac", "mp3"]
opus = []
vorbis = []
flac = []
mp3 = []
pcm = []

[dependencies]
oximedia-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
oxifft.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
