[package]
name = "oximedia-cloud"
description = "Cloud storage and media services integration for AWS, Azure, and GCP"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# AWS SDK (ring-based TLS to avoid aws-lc-sys C dependency)
aws-config = { version = "1.8", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-sdk-s3 = { version = "1.29", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-mediaconvert = { version = "1.28", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-medialive = { version = "1.31", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-mediapackage = { version = "1.25", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-cloudwatch = { version = "1.29", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-sts = { version = "1.25", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-kms = { version = "1.26", default-features = false, features = ["rustls", "rt-tokio"] }
aws-smithy-types = "1.3"
aws-smithy-runtime = { version = "1", features = ["tls-rustls", "client"] }
aws-smithy-runtime-api = "1.9"

# Azure SDK
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_identity = "0.32"

# GCP (using reqwest for REST API)
reqwest = { workspace = true, features = ["stream"] }
base64 = { workspace = true }
url = "2.5"
sha2 = { workspace = true }
hmac = { workspace = true }
md-5 = "0.10"
hex = "0.4"

# Additional utilities
futures = "0.3"
pin-project = "1.1"
parking_lot = { workspace = true }
dashmap = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
tempfile = "3.26"
wiremock = "0.6"
test-case = "3.3"
